--- a/kitty-theme/.config/kitty/current-theme.conf
+++ b/kitty-theme/.config/kitty/current-theme.conf
@@ -3,6 +3,13 @@
 ## license: MIT/X11
 ## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark.conf
 
+active_tab_foreground   #282828
+active_tab_background   #a9b665
+active_tab_font_style   bold-italic
+inactive_tab_foreground #d4be98
+inactive_tab_background #32302f
+inactive_tab_font_style normal
+
 selection_foreground    #ebdbb2
 selection_background    #d65d0e
 
