--- a/kitty-theme/.config/kitty/current-theme.conf
+++ b/kitty-theme/.config/kitty/current-theme.conf
@@ -4,7 +4,7 @@
 ## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark.conf
 
 active_tab_foreground   #282828
-active_tab_background   #a9b665
+active_tab_background   #73655C
 active_tab_font_style   bold-italic
 inactive_tab_foreground #d4be98
 inactive_tab_background #32302f
