--- a/kitty-theme/.config/kitty/current-theme.conf
+++ b/kitty-theme/.config/kitty/current-theme.conf
@@ -1,3 +1,15 @@
+################
+# DON'T DELETE #
+################
+# startup layout
+enabled_layouts tall,vertical,grid,splits,stack
+# panes colors
+active_border_color    #00A3CB
+inactive_border_color  #cccccc
+
+#########
+# THEME #
+#########
 ## name: Gruvbox Dark
 ## author: Pavel Pertsev
 ## license: MIT/X11
@@ -11,7 +23,7 @@ inactive_tab_background #32302f
 inactive_tab_font_style normal
 
 selection_foreground    #ebdbb2
-selection_background    #d65d0e
+selection_background    #8D836E
 
 background              #282828
 foreground              #ebdbb2
