--- a/dconf-settings/gnome-setting-backup.ini
+++ b/dconf-settings/gnome-setting-backup.ini
@@ -116,8 +116,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/teapot-2.jpg'
-picture-uri-dark='file:///usr/share/backgrounds/gruvbox/teapot-2.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
+picture-uri-dark='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -146,10 +146,13 @@ show-battery-percentage=false
 text-scaling-factor=1.0
 
 [org/gnome/desktop/notifications]
-application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty']
+application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager']
 
 [org/gnome/desktop/notifications/application/cachy-browser]
 application-id='cachy-browser.desktop'
+
+[org/gnome/desktop/notifications/application/com-mattjakeman-extensionmanager]
+application-id='com.mattjakeman.ExtensionManager.desktop'
 
 [org/gnome/desktop/notifications/application/com-spotify-client]
 application-id='com.spotify.Client.desktop'
@@ -232,7 +235,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/teapot-2.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -427,8 +430,8 @@ command-history=['gnome-screenshot --delay=5', 'ls']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'blur-my-shell@aunetx', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'dash-to-dock@micxgx.gmail.com']
-favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'dash-to-dock@micxgx.gmail.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com']
+favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
 
@@ -613,7 +616,7 @@ blur-on-overview=true
 brightness=0.41999999999999998
 customize=false
 enable-all=true
-opacity=209
+opacity=175
 sigma=200
 whitelist=@as []
 
@@ -630,7 +633,8 @@ unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=15
-indicator-position-max=2
+indicator-position-max=1
+toggle-state=false
 
 [org/gnome/shell/extensions/clipboard-indicator]
 clear-history=['<Shift><Super>v']
@@ -657,7 +661,7 @@ apply-custom-theme=false
 autohide=true
 autohide-in-fullscreen=true
 background-color='rgb(27,30,31)'
-background-opacity=0.67000000000000004
+background-opacity=0.71999999999999997
 click-action='minimize-or-overview'
 custom-background-color=true
 custom-theme-shrink=false
@@ -682,7 +686,7 @@ min-alpha=0.39000000000000001
 multi-monitor=true
 preferred-monitor=-2
 preferred-monitor-by-connector='DP-2'
-preview-size-scale=0.0
+preview-size-scale=0.10000000000000001
 running-indicator-style='DOTS'
 scroll-action='do-nothing'
 shift-click-action='minimize'
@@ -985,7 +989,7 @@ center-window=['<Super>c']
 debugging-free-rects=@as []
 debugging-show-tiled-rects=@as []
 default-move-mode=1
-dynamic-keybinding-behavior=1
+dynamic-keybinding-behavior=2
 enable-advanced-experimental-features=true
 import-layout-examples=false
 last-version-installed=41
@@ -994,25 +998,25 @@ overridden-settings={'org.gnome.mutter.edge-tiling': <true>}
 restore-window=['<Super>r']
 search-popup-layout=@as []
 single-screen-gap=0
-tile-bottom-half=['<Super>j']
+tile-bottom-half=['<Shift><Super>j']
 tile-bottom-half-ignore-ta=@as []
-tile-bottomleft-quarter=['<Shift><Super>j']
+tile-bottomleft-quarter=['<Control><Super>h']
 tile-bottomleft-quarter-ignore-ta=@as []
-tile-bottomright-quarter=['<Shift><Super>k']
+tile-bottomright-quarter=['<Control><Super>l']
 tile-bottomright-quarter-ignore-ta=@as []
 tile-edit-mode=['<Super>x']
-tile-left-half=['<Super>h']
+tile-left-half=['<Shift><Super>h']
 tile-left-half-ignore-ta=@as []
 tile-maximize=@as []
 tile-maximize-horizontally=@as []
 tile-maximize-vertically=@as []
-tile-right-half=['<Super>l']
+tile-right-half=['<Shift><Super>l']
 tile-right-half-ignore-ta=@as []
-tile-top-half=['<Super>k']
+tile-top-half=['<Shift><Super>k']
 tile-top-half-ignore-ta=@as []
-tile-topleft-quarter=['<Shift><Super>h']
+tile-topleft-quarter=['<Control><Super>j']
 tile-topleft-quarter-ignore-ta=@as []
-tile-topright-quarter=['<Shift><Super>l']
+tile-topright-quarter=['<Control><Super>k']
 tile-topright-quarter-ignore-ta=@as []
 toggle-always-on-top=['<Super>m']
 toggle-tiling-popup=@as []
