--- a/dconf-settings/gnome-setting-backup.ini
+++ b/dconf-settings/gnome-setting-backup.ini
@@ -54,7 +54,7 @@ target-units='radian'
 word-size=64
 
 [org/gnome/control-center]
-last-panel='search'
+last-panel='keyboard'
 window-state=(1600, 883, false)
 
 [org/gnome/desktop/a11y/magnifier]
@@ -116,8 +116,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
-picture-uri-dark='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/houses.jpg'
+picture-uri-dark='file:///usr/share/backgrounds/gruvbox/houses.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -235,7 +235,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/Poppy Hill Road.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/houses.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -275,8 +275,8 @@ move-to-workspace-left=@as []
 move-to-workspace-right=@as []
 panel-main-menu=['<Alt>F1']
 panel-run-dialog=['<Shift><Super>x']
-switch-applications=['<Super>Tab']
-switch-applications-backward=['<Shift><Super>Tab']
+switch-applications=@as []
+switch-applications-backward=@as []
 switch-panels=@as []
 switch-panels-backward=@as []
 switch-to-workspace-1=['<Super>i']
@@ -299,10 +299,10 @@ toggle-maximized=['<Super>f']
 unmaximize=@as []
 
 [org/gnome/desktop/wm/preferences]
-button-layout='appmenu:minimize,maximize,close'
+button-layout=':'
 resize-with-right-button=true
 titlebar-font='IBM Plex Sans Bold 10'
-workspace-names=@as []
+workspace-names=['term', 'code', 'web', 'media']
 
 [org/gnome/file-roller/dialogs/extract]
 recreate-folders=true
@@ -406,7 +406,7 @@ night-light-enabled=false
 night-light-temperature=uint32 4700
 
 [org/gnome/settings-daemon/plugins/media-keys]
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
 home=@as []
 logout=['<Shift><Super>q']
 next=['AudioNext']
@@ -423,14 +423,19 @@ binding='<Super>Return'
 command='kitty -1'
 name='kitty'
 
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
+binding='<Super>Tab'
+command='/home/twilight/script.sh'
+name='minimized-apps'
+
 [org/gnome/shell]
 always-show-log-out=true
 app-picker-layout=[{'0b146a58-29d9-4390-ad71-6aebf6d25a17': <{'position': <0>}>, 'Utilities': <{'position': <1>}>, '90fbea95-7a17-4d44-b17d-619750c0eba9': <{'position': <2>}>, '2b23d07b-a35e-4700-8d64-83903325174a': <{'position': <3>}>, 'org.gnome.Nautilus.desktop': <{'position': <4>}>, 'cachyos-pi.desktop': <{'position': <5>}>, 'org.gnome.Totem.desktop': <{'position': <6>}>, 'org.gnome.Calculator.desktop': <{'position': <7>}>, 'org.gnome.gedit.desktop': <{'position': <8>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <9>}>, 'firewall-config.desktop': <{'position': <10>}>, 'lstopo.desktop': <{'position': <11>}>, 'org.gnome.Meld.desktop': <{'position': <12>}>, 'micro.desktop': <{'position': <13>}>, 'mpv.desktop': <{'position': <14>}>, 'octopi.desktop': <{'position': <15>}>, 'octopi-cachecleaner.desktop': <{'position': <16>}>, 'qv4l2.desktop': <{'position': <17>}>, 'wine-Programs-Riot Games-Riot Client.desktop': <{'position': <18>}>, 'pavucontrol.desktop': <{'position': <19>}>, 'variety.desktop': <{'position': <20>}>, 'qvidcap.desktop': <{'position': <21>}>, 'gda-control-center-5.0.desktop': <{'position': <22>}>, 'org.gnome.Extensions.desktop': <{'position': <23>}>}, {'gda-browser-5.0.desktop': <{'position': <0>}>, 'com.rafaelmardojai.Blanket.desktop': <{'position': <1>}>, 'gnome-mplayer.desktop': <{'position': <2>}>, 'org.gnome.Settings.desktop': <{'position': <3>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls']
 disable-extension-version-validation=true
 disable-user-extensions=false
-disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'dash-to-dock@micxgx.gmail.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com']
+disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
@@ -602,9 +607,11 @@ quick-toggles-hide-system-levels=false
 quick-toggles-style=2
 window-headerbar=false
 workspace-indicator=true
+workspace-indicator-active-name=''
 workspace-indicator-offset=1
 workspace-indicator-position=1
 workspace-indicator-show-names=true
+workspace-indicator-style=0
 
 [org/gnome/shell/extensions/blur-my-shell]
 hacks-level=3
@@ -633,7 +640,7 @@ unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=15
-indicator-position-max=1
+indicator-position-max=2
 toggle-state=false
 
 [org/gnome/shell/extensions/clipboard-indicator]
