--- a/dconf-settings/gnome-setting-backup.ini
+++ b/dconf-settings/gnome-setting-backup.ini
@@ -55,7 +55,7 @@ word-size=64
 
 [org/gnome/control-center]
 last-panel='keyboard'
-window-state=(1600, 883, false)
+window-state=(1359, 794, false)
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=1.0
@@ -116,8 +116,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/houses.jpg'
-picture-uri-dark='file:///usr/share/backgrounds/gruvbox/houses.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/forest.jpg'
+picture-uri-dark='file:///usr/share/backgrounds/gruvbox/forest.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -139,6 +139,7 @@ font-antialiasing='grayscale'
 font-hinting='slight'
 font-name='IBM Plex Sans 10'
 gtk-enable-primary-paste=false
+gtk-key-theme='Emacs'
 gtk-theme='Gruvbox-Dark-BL-MOD'
 icon-theme='Gruvbox_Cursors_Dark'
 monospace-font-name='FiraCode Nerd Font Mono 10'
@@ -146,7 +147,7 @@ show-battery-percentage=false
 text-scaling-factor=1.0
 
 [org/gnome/desktop/notifications]
-application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager']
+application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager', 'discord', 'org-gnome-gedit']
 
 [org/gnome/desktop/notifications/application/cachy-browser]
 application-id='cachy-browser.desktop'
@@ -156,6 +157,9 @@ application-id='com.mattjakeman.ExtensionManager.desktop'
 
 [org/gnome/desktop/notifications/application/com-spotify-client]
 application-id='com.spotify.Client.desktop'
+
+[org/gnome/desktop/notifications/application/discord]
+application-id='discord.desktop'
 
 [org/gnome/desktop/notifications/application/firefox]
 application-id='firefox.desktop'
@@ -180,6 +184,9 @@ application-id='org.gnome.eog.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-extensions-desktop]
 application-id='org.gnome.Extensions.desktop.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-gedit]
+application-id='org.gnome.gedit.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-nautilus]
 application-id='org.gnome.Nautilus.desktop'
@@ -220,6 +227,7 @@ repeat-interval=uint32 15
 accel-profile='flat'
 
 [org/gnome/desktop/peripherals/touchpad]
+click-method='fingers'
 natural-scroll=false
 tap-and-drag=true
 tap-to-click=true
@@ -235,7 +243,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/houses.jpg'
+picture-uri='file:///usr/share/backgrounds/gruvbox/forest.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -345,7 +353,7 @@ open-recent=true
 bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
-size=(771, 676)
+size=(1279, 995)
 state=87168
 
 [org/gnome/gnome-screenshot]
@@ -424,7 +432,7 @@ command='kitty -1'
 name='kitty'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
-binding='<Super>Tab'
+binding='<Shift><Super>Tab'
 command='/home/twilight/script.sh'
 name='minimized-apps'
 
@@ -435,7 +443,7 @@ command-history=['gnome-screenshot --delay=5', 'ls']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
@@ -868,6 +876,9 @@ window-size=(640, 480)
 window-maximized=false
 window-size=(959, 995)
 
+[org/gnome/shell/extensions/gtktitlebar]
+hide-window-titlebars='always'
+
 [org/gnome/shell/extensions/just-perfection]
 activities-button=true
 dash-icon-size=0
@@ -1119,5 +1130,5 @@ sort-column='name'
 sort-directories-first=false
 sort-order='descending'
 type-format='category'
-window-position=(403, 178)
+window-position=(2643, 178)
 window-size=(1115, 708)
