--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -116,8 +116,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/forest.jpg'
-picture-uri-dark='file:///usr/share/backgrounds/gruvbox/forest.jpg'
+picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
+picture-uri-dark='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -147,7 +147,7 @@ show-battery-percentage=false
 text-scaling-factor=1.0
 
 [org/gnome/desktop/notifications]
-application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager', 'discord', 'org-gnome-gedit']
+application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager', 'discord', 'org-gnome-gedit', 'gnome-power-panel']
 
 [org/gnome/desktop/notifications/application/cachy-browser]
 application-id='cachy-browser.desktop'
@@ -166,6 +166,9 @@ application-id='firefox.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-network-panel]
 application-id='gnome-network-panel.desktop'
+
+[org/gnome/desktop/notifications/application/gnome-power-panel]
+application-id='gnome-power-panel.desktop'
 
 [org/gnome/desktop/notifications/application/kitty]
 application-id='kitty.desktop'
@@ -243,7 +246,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///usr/share/backgrounds/gruvbox/forest.jpg'
+picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -433,13 +436,13 @@ name='kitty'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
 binding='<Shift><Super>Tab'
-command='/home/twilight/script.sh'
+command='/usr/bin/minimized-apps'
 name='minimized-apps'
 
 [org/gnome/shell]
 always-show-log-out=true
 app-picker-layout=[{'0b146a58-29d9-4390-ad71-6aebf6d25a17': <{'position': <0>}>, 'Utilities': <{'position': <1>}>, '90fbea95-7a17-4d44-b17d-619750c0eba9': <{'position': <2>}>, '2b23d07b-a35e-4700-8d64-83903325174a': <{'position': <3>}>, 'org.gnome.Nautilus.desktop': <{'position': <4>}>, 'cachyos-pi.desktop': <{'position': <5>}>, 'org.gnome.Totem.desktop': <{'position': <6>}>, 'org.gnome.Calculator.desktop': <{'position': <7>}>, 'org.gnome.gedit.desktop': <{'position': <8>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <9>}>, 'firewall-config.desktop': <{'position': <10>}>, 'lstopo.desktop': <{'position': <11>}>, 'org.gnome.Meld.desktop': <{'position': <12>}>, 'micro.desktop': <{'position': <13>}>, 'mpv.desktop': <{'position': <14>}>, 'octopi.desktop': <{'position': <15>}>, 'octopi-cachecleaner.desktop': <{'position': <16>}>, 'qv4l2.desktop': <{'position': <17>}>, 'wine-Programs-Riot Games-Riot Client.desktop': <{'position': <18>}>, 'pavucontrol.desktop': <{'position': <19>}>, 'variety.desktop': <{'position': <20>}>, 'qvidcap.desktop': <{'position': <21>}>, 'gda-control-center-5.0.desktop': <{'position': <22>}>, 'org.gnome.Extensions.desktop': <{'position': <23>}>}, {'gda-browser-5.0.desktop': <{'position': <0>}>, 'com.rafaelmardojai.Blanket.desktop': <{'position': <1>}>, 'gnome-mplayer.desktop': <{'position': <2>}>, 'org.gnome.Settings.desktop': <{'position': <3>}>}]
-command-history=['gnome-screenshot --delay=5', 'ls']
+command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
@@ -648,12 +651,12 @@ unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=15
-indicator-position-max=2
+indicator-position-max=1
 toggle-state=false
 
 [org/gnome/shell/extensions/clipboard-indicator]
 clear-history=['<Shift><Super>v']
-history-size=1
+history-size=20
 next-entry=['<Alt><Super>n']
 prev-entry=['<Alt><Super>p']
 toggle-menu=['<Super>v']
@@ -1130,5 +1133,5 @@ sort-column='name'
 sort-directories-first=false
 sort-order='descending'
 type-format='category'
-window-position=(2643, 178)
+window-position=(1899, 322)
 window-size=(1115, 708)
