--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -12,7 +12,7 @@ style-variant='use-default'
 
 [com/rafaelmardojai/Blanket]
 playing=true
-scroll-position=714.0
+scroll-position=0.0
 volume=1.0
 
 [com/rafaelmardojai/Blanket/e52f7134-cff9-463b-9f7d-3740d2cc1d57]
@@ -116,8 +116,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
-picture-uri-dark='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
+picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
+picture-uri-dark='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -246,7 +246,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1686489548092-9b24e1a76b22.jpg'
+picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -417,7 +417,7 @@ night-light-enabled=false
 night-light-temperature=uint32 4700
 
 [org/gnome/settings-daemon/plugins/media-keys]
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7/']
 home=@as []
 logout=['<Shift><Super>q']
 next=['AudioNext']
@@ -439,6 +439,36 @@ binding='<Shift><Super>Tab'
 command='/usr/bin/minimized-apps'
 name='minimized-apps'
 
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2]
+binding='<Control><Super>c'
+command='kitty -1 -e cava'
+name='cava'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3]
+binding='<Control><Super>comma'
+command='kitty -1 -e cmatrix -a'
+name='cmatrix'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4]
+binding='<Control><Super>m'
+command='kitty -1 -e musikcube'
+name='musikcube'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5]
+binding='<Control><Super>n'
+command='kitty -1 -e newsboat'
+name='newsboat'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6]
+binding='<Control><Super>u'
+command='kitty -1 -e tty-clock -c -C 3 -r -s -f "%B, %d"'
+name='tty-clock'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7]
+binding='<Control><Super>p'
+command='kitty -1 -e pipes'
+name='pipes'
+
 [org/gnome/shell]
 always-show-log-out=true
 app-picker-layout=[{'0b146a58-29d9-4390-ad71-6aebf6d25a17': <{'position': <0>}>, 'Utilities': <{'position': <1>}>, '90fbea95-7a17-4d44-b17d-619750c0eba9': <{'position': <2>}>, '2b23d07b-a35e-4700-8d64-83903325174a': <{'position': <3>}>, 'org.gnome.Nautilus.desktop': <{'position': <4>}>, 'cachyos-pi.desktop': <{'position': <5>}>, 'org.gnome.Totem.desktop': <{'position': <6>}>, 'org.gnome.Calculator.desktop': <{'position': <7>}>, 'org.gnome.gedit.desktop': <{'position': <8>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <9>}>, 'firewall-config.desktop': <{'position': <10>}>, 'lstopo.desktop': <{'position': <11>}>, 'org.gnome.Meld.desktop': <{'position': <12>}>, 'micro.desktop': <{'position': <13>}>, 'mpv.desktop': <{'position': <14>}>, 'octopi.desktop': <{'position': <15>}>, 'octopi-cachecleaner.desktop': <{'position': <16>}>, 'qv4l2.desktop': <{'position': <17>}>, 'wine-Programs-Riot Games-Riot Client.desktop': <{'position': <18>}>, 'pavucontrol.desktop': <{'position': <19>}>, 'variety.desktop': <{'position': <20>}>, 'qvidcap.desktop': <{'position': <21>}>, 'gda-control-center-5.0.desktop': <{'position': <22>}>, 'org.gnome.Extensions.desktop': <{'position': <23>}>}, {'gda-browser-5.0.desktop': <{'position': <0>}>, 'com.rafaelmardojai.Blanket.desktop': <{'position': <1>}>, 'gnome-mplayer.desktop': <{'position': <2>}>, 'org.gnome.Settings.desktop': <{'position': <3>}>}]
@@ -447,7 +477,7 @@ disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
 enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io']
-favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop']
+favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
 
@@ -652,7 +682,6 @@ unblur-in-overview=false
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=15
 indicator-position-max=1
-toggle-state=false
 
 [org/gnome/shell/extensions/clipboard-indicator]
 clear-history=['<Shift><Super>v']
