--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -552,7 +552,7 @@ unity-extra-buttons=[['Home', 'user-home-symbolic', 'ArcMenu_Home'], ['Documents
 application-list=['brave-browser.desktop:3', 'discord.desktop:4', 'kitty.desktop:1', 'net.lutris.Lutris.desktop:4', 'cachy-browser.desktop:3']
 
 [org/gnome/shell/extensions/aylurs-widgets]
-background-clock=true
+background-clock=false
 background-clock-bg-border-radius=0
 background-clock-bg-border-size=0
 background-clock-bg-padding=0
