--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -55,35 +55,18 @@ word-size=64
 
 [org/gnome/control-center]
 last-panel='keyboard'
-window-state=(1359, 794, false)
+window-state=(1174, 771, false)
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=1.0
 
 [org/gnome/desktop/app-folders]
-folder-children=['Utilities', 'YaST', '0b146a58-29d9-4390-ad71-6aebf6d25a17', '90fbea95-7a17-4d44-b17d-619750c0eba9', '2b23d07b-a35e-4700-8d64-83903325174a']
+folder-children=['YaST', '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e']
 
-[org/gnome/desktop/app-folders/folders/0b146a58-29d9-4390-ad71-6aebf6d25a17]
-apps=['bvnc.desktop', 'bssh.desktop', 'avahi-discover.desktop']
-name='AVAHI'
+[org/gnome/desktop/app-folders/folders/4f30ef93-ae2e-4d81-8628-5dd4255b7b9e]
+apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop']
+name='not GUI'
 translate=false
-
-[org/gnome/desktop/app-folders/folders/2b23d07b-a35e-4700-8d64-83903325174a]
-apps=['nvim.desktop', 'nnn.desktop', 'vim.desktop']
-name='Terminal'
-translate=false
-
-[org/gnome/desktop/app-folders/folders/90fbea95-7a17-4d44-b17d-619750c0eba9]
-apps=['brave-browser.desktop', 'emacs.desktop', 'btop.desktop', 'org.gnome.Usage.desktop']
-name='Usefull'
-translate=false
-
-[org/gnome/desktop/app-folders/folders/Utilities]
-apps=['gnome-abrt.desktop', 'gnome-system-log.desktop', 'nm-connection-editor.desktop', 'org.gnome.baobab.desktop', 'org.gnome.Connections.desktop', 'org.gnome.DejaDup.desktop', 'org.gnome.Dictionary.desktop', 'org.gnome.DiskUtility.desktop', 'org.gnome.eog.desktop', 'org.gnome.Evince.desktop', 'org.gnome.FileRoller.desktop', 'org.gnome.fonts.desktop', 'org.gnome.seahorse.Application.desktop', 'org.gnome.tweaks.desktop', 'vinagre.desktop', 'org.gnome.PowerStats.desktop', 'gnome-nettool.desktop']
-categories=['X-GNOME-Utilities']
-excluded-apps=['org.gnome.Usage.desktop']
-name='X-GNOME-Utilities.directory'
-translate=true
 
 [org/gnome/desktop/app-folders/folders/YaST]
 categories=['X-SuSE-YaST']
@@ -116,8 +99,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
-picture-uri-dark='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
+picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
+picture-uri-dark='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -246,7 +229,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/variety/Downloaded/Unsplash/photo-1685877596988-18f654f1138f.jpg'
+picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -417,7 +400,7 @@ night-light-enabled=false
 night-light-temperature=uint32 4700
 
 [org/gnome/settings-daemon/plugins/media-keys]
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7/']
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8/']
 home=@as []
 logout=['<Shift><Super>q']
 next=['AudioNext']
@@ -469,15 +452,20 @@ binding='<Control><Super>p'
 command='kitty -1 -e pipes'
 name='pipes'
 
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8]
+binding='<Shift><Super>m'
+command='/usr/bin/wallpaper'
+name='new wallpaper'
+
 [org/gnome/shell]
 always-show-log-out=true
-app-picker-layout=[{'0b146a58-29d9-4390-ad71-6aebf6d25a17': <{'position': <0>}>, 'Utilities': <{'position': <1>}>, '90fbea95-7a17-4d44-b17d-619750c0eba9': <{'position': <2>}>, '2b23d07b-a35e-4700-8d64-83903325174a': <{'position': <3>}>, 'org.gnome.Nautilus.desktop': <{'position': <4>}>, 'cachyos-pi.desktop': <{'position': <5>}>, 'org.gnome.Totem.desktop': <{'position': <6>}>, 'org.gnome.Calculator.desktop': <{'position': <7>}>, 'org.gnome.gedit.desktop': <{'position': <8>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <9>}>, 'firewall-config.desktop': <{'position': <10>}>, 'lstopo.desktop': <{'position': <11>}>, 'org.gnome.Meld.desktop': <{'position': <12>}>, 'micro.desktop': <{'position': <13>}>, 'mpv.desktop': <{'position': <14>}>, 'octopi.desktop': <{'position': <15>}>, 'octopi-cachecleaner.desktop': <{'position': <16>}>, 'qv4l2.desktop': <{'position': <17>}>, 'wine-Programs-Riot Games-Riot Client.desktop': <{'position': <18>}>, 'pavucontrol.desktop': <{'position': <19>}>, 'variety.desktop': <{'position': <20>}>, 'qvidcap.desktop': <{'position': <21>}>, 'gda-control-center-5.0.desktop': <{'position': <22>}>, 'org.gnome.Extensions.desktop': <{'position': <23>}>}, {'gda-browser-5.0.desktop': <{'position': <0>}>, 'com.rafaelmardojai.Blanket.desktop': <{'position': <1>}>, 'gnome-mplayer.desktop': <{'position': <2>}>, 'org.gnome.Settings.desktop': <{'position': <3>}>}]
+app-picker-layout=[{'Utilities': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'cachyos-pi.desktop': <{'position': <2>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <3>}>, 'lstopo.desktop': <{'position': <4>}>, 'org.gnome.Meld.desktop': <{'position': <5>}>, '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <6>}>, 'org.gnome.Extensions.desktop': <{'position': <7>}>, 'webcord.desktop': <{'position': <8>}>, 'logseq-desktop.desktop': <{'position': <9>}>, 'org.gnome.Settings.desktop': <{'position': <10>}>, 'org.gnome.Usage.desktop': <{'position': <11>}>, 'org.gnome.PowerStats.desktop': <{'position': <12>}>, 'org.gnome.tweaks.desktop': <{'position': <13>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
 enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io']
-favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'brave-browser.desktop', 'emacsclient.desktop', 'discord.desktop', 'net.lutris.Lutris.desktop', 'com.rafaelmardojai.Blanket.desktop']
+favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
 
